# stock-simulator

./: CMakeLists.txt  README.md  config.h  generator.cpp  generator.h  handler.cpp  handler.h  utils.cpp  utils.h
include/: config.h  generator.h  handler.h  utils.h
